# fruitflow-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PLAN.md  README.md  pyproject.toml  railway.json  render.yaml
.github/workflows/: ci.yml
backend/: config.py
backend/application/: unit_of_work.py
backend/application/dto/: __init__.py  comandos.py
backend/application/ports/: __init__.py  repositorios.py  unidad_de_trabajo.py
backend/application/use_cases/: anular_operacion.py  borradores.py  registrar_finanzas.py  registrar_operaciones.py
backend/domain/cajas/: politica.py
backend/domain/common/: tipos.py
backend/domain/contrapartes/: modelo.py
backend/domain/finanzas/: modelo.py
backend/domain/operaciones/: borrador.py  compra.py  costeo.py  venta.py
backend/infrastructure/ai/: cliente.py  esquemas.py  resolver.py
backend/infrastructure/db/: esquema.py  models.py  session.py  uow.py
backend/interfaces/http/: dependencias.py  esquemas.py  main.py
backend/interfaces/i18n/: es.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: 02-Arquitectura.md  04-Reglas-de-negocio.md  05-Motor-IA.md  08-Despliegue.md  09-Testing.md  11-Decisiones-abiertas.md
prompts/: clasificar_intencion.md  extraer_documento.md  extraer_operacion.md
prompts/schemas/: operacion.json
scripts/: backup.sh  demo_operaciones.py  restore.sh  seed_dev.py
sql/: 001_schema.sql  002_vistas.sql
telegram_bot/: api_client.py  main.py  middlewares.py  pipeline.py  presentacion.py
telegram_bot/formatters/: tarjetas.py
telegram_bot/handlers/: callbacks.py  comandos.py  mensajes.py
telegram_bot/keyboards/: confirmacion.py
tests/: fakes.py
worker/: celery_app.py
(+23 files in other folders)
