[project]
name = "fruitflow-ai"
version = "0.1.0"
description = "ERP conversacional para comercializacion de fruta, operado por Telegram"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "aiogram>=3.15",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "uuid6>=2024.7.10",
    "httpx>=0.28",
    "structlog>=24.4",
    "minio>=7.2",
    "tenacity>=9.0",
    "openai>=1.57",
    "python-multipart>=0.0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "faker>=33.0",
    "testcontainers[postgres]>=4.8",
]
media = [
    "pymupdf>=1.24",
    "pytesseract>=0.3.13",
    "pillow>=11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "telegram_bot", "worker"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# N818: las excepciones de dominio llevan nombre en espanol (ErrorDominio).
ignore = ["B008", "N818"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = []

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
markers = [
    "integration: requiere PostgreSQL",
    "e2e: extremo a extremo",
]
